Added Mongodb default connectionstring and refactored the way the mongodb client is setup while deleting the static credentials files for it and twilio

--- a/Lazztech.ObsidianPresences.ClientFacade/appsettings.json
+++ b/Lazztech.ObsidianPresences.ClientFacade/appsettings.json
@@ -1,7 +1,8 @@
 {
   "ConnectionStrings": {
     //"DefaultConnection": "host=postgres_image;port=5432;database=values_db;username=dbuser;password=dbpwd"
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=LazztechContext;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=LazztechContext;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "MongoDBConnection": "mongodb://USERNAME:PASSWORD@SERVERURL.COM:PORT/DATABASENAME"
   },
   "TwilioCredentials": {
     "AccountSid": "",
