--- a/Lazztech.ObsidianPresences.Vision.Microservice.Cli/Lazztech.Vision.Cli.csproj
+++ b/Lazztech.ObsidianPresences.Vision.Microservice.Cli/Lazztech.Vision.Cli.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="SixLabors.ImageSharp" Version="1.0.0-beta0004" />
     <PackageReference Include="SixLabors.ImageSharp.Drawing" Version="1.0.0-beta0004" />
   </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Lazztech.ObsidianPresences.Vision.Microservice.Domain\Lazztech.Vision.Domain.csproj" />
+  </ItemGroup>
 </Project>
