--- a/Lazztech.Events/Lazztech.Events.csproj
+++ b/Lazztech.Events/Lazztech.Events.csproj
@@ -5,9 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Models\" />
     <Folder Include="Sms\" />
-    <Folder Include="RepositoryPattern\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Lazztech.Events.Dto\Lazztech.Events.Dto.csproj" />
   </ItemGroup>
 
 </Project>
