--- a/Lazztech.SrndResourcesManager/Lazztech.SrndResourcesManager.csproj
+++ b/Lazztech.SrndResourcesManager/Lazztech.SrndResourcesManager.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Lazztech.Events\Lazztech.Events.csproj" />
+    <ProjectReference Include="..\Lazztech.Events\Lazztech.Events.Domain.csproj" />
   </ItemGroup>
 
 </Project>
