--- a/Lazztech.DIContext/Lazztech.DIContext.csproj
+++ b/Lazztech.DIContext/Lazztech.DIContext.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Lazztech.Events\Lazztech.Events.csproj" />
+    <ProjectReference Include="..\Lazztech.Events\Lazztech.Events.Domain.csproj" />
     <ProjectReference Include="..\Lazztech.MongoDB\Lazztech.MongoDB.csproj" />
     <ProjectReference Include="..\Lazztech.Sms\Lazztech.Sms.csproj" />
   </ItemGroup>
