Refactored MentorRequestConductor test to handle Guide response instead of help also fixed left over reference problems

--- a/Lazztech.Cloud.ClientFacade/Lazztech.Cloud.ClientFacade.csproj
+++ b/Lazztech.Cloud.ClientFacade/Lazztech.Cloud.ClientFacade.csproj
@@ -21,6 +21,8 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Lazztech.Events\Lazztech.Events.Domain.csproj" />
+    <ProjectReference Include="..\Lazztech.MongoDB\Lazztech.MongoDB.csproj" />
+    <ProjectReference Include="..\Lazztech.Sms\Lazztech.Sms.csproj" />
     <ProjectReference Include="..\Lazztech.Vision.Domain\Lazztech.Vision.Domain.csproj" />
   </ItemGroup>
 
