--- a/Lazztech.Cloud.ClientFacade/Lazztech.Cloud.ClientFacade.csproj
+++ b/Lazztech.Cloud.ClientFacade/Lazztech.Cloud.ClientFacade.csproj
@@ -20,6 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\Lazztech.Standard\Lazztech.Standard.csproj" />
     <ProjectReference Include="..\Lazztech.Events\Lazztech.Events.Domain.csproj" />
     <ProjectReference Include="..\Lazztech.MongoDB\Lazztech.MongoDB.csproj" />
     <ProjectReference Include="..\Lazztech.Sms\Lazztech.Sms.csproj" />
