--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -12,8 +12,8 @@ services:
 #      context: .
 #      dockerfile: Lazztech.Cloud.Vision.Cli/Dockerfile
 
-  lazztech.Cloud.clientfacade:
-    image: lazztechCloudclientfacade
+  lazztechcloudclientfacade:
+    image: lazztechcloudclientfacade
     volumes:
 #      - /Users/gianlazzarini/Desktop/face_recognition:/face/
 #      - C:\Users\Gian Lazzarini\Desktop\face_recognition:/face/
