--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,8 @@
 version: '3.4'
 
 services:
-  lazztech.Cloud.clientfacade:
-    image: lazztechCloudclientfacade
+  lazztechcloudclientfacade:
+    image: lazztechcloudclientfacade
     volumes:
 #      - /Users/gianlazzarini/Desktop/face_recognition:/face/
 #      - C:\Users\Gian Lazzarini\Desktop\face_recognition:/face/
