--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -17,14 +17,15 @@ services:
       context: .
       dockerfile: Lazztech.Cloud.ClientFacade/Dockerfile
 
-  postgres_image:
-    image: postgres:alpine
-    ports:
-      - "5433:5432"
-    environment:
-      POSTGRES_USER: "dbuser"
-      POSTGRES_PASSWORD: "dbpwd"
-      POSTGRES_DB: "values_db"
+#Hidden since during development I'll be using locally installed postgres server
+#  postgres_image:
+#    image: postgres:alpine
+#    ports:
+#      - "5433:5432"
+#    environment:
+#      POSTGRES_USER: "dbuser"
+#      POSTGRES_PASSWORD: "dbpwd"
+#      POSTGRES_DB: "values_db"
 
 # volumes:
 #   lazztech-cloud-data:
