--- a/docker-compose.rpi-cluster-prod.yml
+++ b/docker-compose.rpi-cluster-prod.yml
@@ -1,14 +1,10 @@
 version: '3.4'
 
 services:
-  lazztech.Cloud.clientfacade:
-    image: lazztechCloudclientfacade:arm32
+  lazztechcloudclientfacade:
+    image: lazztechcloudclientfacade:arm32
     volumes:
-#      - /Users/gianlazzarini/Desktop/face_recognition:/face/
-#      - C:\Users\Gian Lazzarini\Desktop\face_recognition:/face/
-#      - C:\face_recognition:/face/
       - lazztech-cloud-data:/face/
-#    environment:
     ports: 
       - 80:80
     build:
@@ -17,12 +13,15 @@ services:
 
   postgres_image:
     image: postgres:alpine
-#    ports:
-#      - "5432:5432"
+    ports:
+      - 5433:5432
     environment:
       POSTGRES_USER: "dbuser"
       POSTGRES_PASSWORD: "dbpwd"
       POSTGRES_DB: "values_db"
+    volumes:
+      - postgres-data:/var/lib/postgresql/data
 
 volumes:
+  postgres-data:
   lazztech-cloud-data:
