--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,11 +4,7 @@ services:
   lazztechcloudclientfacade:
     image: lazztechcloudclientfacade
     volumes:
-#      - /Users/gianlazzarini/Desktop/face_recognition:/face/
-#      - C:\Users\Gian Lazzarini\Desktop\face_recognition:/face/
-#      - C:\face_recognition:/face/
       - lazztech-cloud-data:/face/
-#    environment:
     ports: 
       - 80:80
     build:
@@ -17,12 +13,15 @@ services:
 
   postgres_image:
     image: postgres:alpine
-#    ports:
-#      - "5432:5432"
+    ports:
+      - 5433:5432
     environment:
       POSTGRES_USER: "dbuser"
       POSTGRES_PASSWORD: "dbpwd"
       POSTGRES_DB: "values_db"
+    volumes:
+      - postgres-data:/var/lib/postgresql/data
 
 volumes:
+  postgres-data:
   lazztech-cloud-data:
