--- a/Lazztech.Event.Dal/Lazztech.Event.Dal.csproj
+++ b/Lazztech.Event.Dal/Lazztech.Event.Dal.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Lazztech.Events.Dto\Lazztech.Events.Dto.csproj" />
+  </ItemGroup>
+
 </Project>
