--- a/Lazztech.Events.Tests/Lazztech.Events.Tests.csproj
+++ b/Lazztech.Events.Tests/Lazztech.Events.Tests.csproj
@@ -16,6 +16,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Lazztech.Events\Lazztech.Events.Domain.csproj" />
+    <ProjectReference Include="..\Lazztech.MongoDB\Lazztech.MongoDB.csproj" />
   </ItemGroup>
 
 </Project>
