--- a/Lazztech.Cloud.ClientFacade/Lazztech.Cloud.ClientFacade.csproj
+++ b/Lazztech.Cloud.ClientFacade/Lazztech.Cloud.ClientFacade.csproj
@@ -8,6 +8,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Data\Migrations\20190212222930_ReplacedEventMentorManyToManyWithEventToManyMentor.cs" />
+    <Compile Remove="Data\Migrations\20190212222930_ReplacedEventMentorManyToManyWithEventToManyMentor.Designer.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Marten" Version="2.8.0" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.0.1916590" />
