--- a/Lazztech.Cloud.ClientFacade/bower.json
+++ b/Lazztech.Cloud.ClientFacade/bower.json
@@ -3,7 +3,8 @@
   "private": true,
   "dependencies": {
     "bootstrap": "v4.1.3",
-    "jquery": "3.2.1"
+    "jquery": "3.2.1",
+    "jquery-ajax-unobtrusive": "v3.2.6"
   },
   "resolutions": {
     "bootstrap": "v4.1.3"
