MentorRequestController logic into a new interface SubmitRequest method in the MentorRequestConductor to replace TryAddRequest

--- a/Lazztech.Events/Lazztech.Events.Domain.csproj
+++ b/Lazztech.Events/Lazztech.Events.Domain.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Lazztech.Event.Dal\Lazztech.Events.Dal.csproj" />
     <ProjectReference Include="..\Lazztech.Events.Dto\Lazztech.Events.Dto.csproj" />
   </ItemGroup>
 
