--- a/Lazztech.Cloud.ClientFacade/Lazztech.Cloud.ClientFacade.csproj
+++ b/Lazztech.Cloud.ClientFacade/Lazztech.Cloud.ClientFacade.csproj
@@ -28,7 +28,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Lazztech.Event.Dal\Lazztech.Events.Dal.csproj" />
+    <ProjectReference Include="..\Lazztech.Events.Dal\Lazztech.Events.Dal.csproj" />
     <ProjectReference Include="..\Lazztech.Events\Lazztech.Events.Domain.csproj" />
     <ProjectReference Include="..\Lazztech.Sms\Lazztech.Sms.csproj" />
     <ProjectReference Include="..\Lazztech.Standard\Lazztech.Standard.csproj" />
