Changed how seeding is handled so that it doesn't conflict with the migrations

--- a/Lazztech.Cloud.ClientFacade/appsettings.json
+++ b/Lazztech.Cloud.ClientFacade/appsettings.json
@@ -1,7 +1,9 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "host=localhost;port=5432;database=lazztech;username=dbuser;password=dbpwd",
-    //"DefaultConnection": "host=postgres_image;port=5432;database=values_db;username=dbuser;password=dbpwd",
+    //localdevelopment
+    //"DefaultConnection": "host=localhost;port=5432;database=lazztech;username=dbuser;password=dbpwd",
+    //dockercompose
+    "DefaultConnection": "host=postgres_image;port=5432;database=values_db;username=dbuser;password=dbpwd",
     //"DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=LazztechContext;Trusted_Connection=True;MultipleActiveResultSets=true",
     "MongoDBConnection": "mongodb://USERNAME:PASSWORD@SERVERURL.COM:PORT/DATABASENAME"
   },
