--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -17,6 +17,13 @@ services:
       context: .
       dockerfile: Lazztech.Cloud.ClientFacade/Dockerfile
 
+  redis_db:
+    image: redis
+    ports:
+      - 6379:6379
+    volumes:
+      - redis-data:/data
+
   postgres_image:
     image: postgres:alpine
     ports:
@@ -29,6 +36,7 @@ services:
       - postgres-data:/var/lib/postgresql/data
 
 volumes:
+  redis-data:
   postgres-data:
   lazztech-vision-data:
   lazztech-cloud-data:
