--- a/Lazztech.Marketing.Instagram/Lazztech.Marketing.Instagram.csproj
+++ b/Lazztech.Marketing.Instagram/Lazztech.Marketing.Instagram.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="InstagramApiSharp" Version="1.3.4.4" />
+  </ItemGroup>
+
 </Project>
