Added to the Marketing dao classes, setup connections string for development, & added marketing entities to the dbcontext

--- a/Lazztech.Cloud.ClientFacade/Lazztech.Cloud.ClientFacade.csproj
+++ b/Lazztech.Cloud.ClientFacade/Lazztech.Cloud.ClientFacade.csproj
@@ -33,6 +33,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Lazztech.Events.Dal\Lazztech.Events.Dal.csproj" />
     <ProjectReference Include="..\Lazztech.Events\Lazztech.Events.Domain.csproj" />
+    <ProjectReference Include="..\Lazztech.Marketing.Dal\Lazztech.Marketing.Dal.csproj" />
     <ProjectReference Include="..\Lazztech.Sms\Lazztech.Sms.csproj" />
     <ProjectReference Include="..\Lazztech.Standard\Lazztech.Standard.csproj" />
     <ProjectReference Include="..\Lazztech.Vision.Domain\Lazztech.Vision.Domain.csproj" />
