--- a/Lazztech.Cloud.ClientFacade/Lazztech.Cloud.ClientFacade.csproj
+++ b/Lazztech.Cloud.ClientFacade/Lazztech.Cloud.ClientFacade.csproj
@@ -943,4 +943,8 @@
     <None Include="wwwroot\minton\dark-horizontal\assets\scss\_wysiwig.scss" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Pages\Marketing\InstagramNodes\" />
+  </ItemGroup>
+
 </Project>
