Working on FocusGroup index page

--- a/Lazztech.Cloud.ClientFacade/Lazztech.Cloud.ClientFacade.csproj
+++ b/Lazztech.Cloud.ClientFacade/Lazztech.Cloud.ClientFacade.csproj
@@ -946,7 +946,11 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Pages\Marketing\Campaigns\" />
+    <Folder Include="Pages\Marketing\FocusGroups\" />
     <Folder Include="Pages\Marketing\InstagramNodes\" />
+    <Folder Include="Pages\Marketing\InstagramPosts\" />
+    <Folder Include="Pages\Marketing\SelectedInstaContents\" />
   </ItemGroup>
 
 </Project>
